@@ -1,0 +1,70 @@
+@article{Sandoval:2011,
+  author =	 {Sandoval, Juan and Heyn, Holger and Moran, Sebastian and Serra-Musach, Jordi and
+                  Pujana, Miguel A and Bibikova, Marina and Esteller, Manel},
+  title =	 {{Validation of a DNA methylation microarray for 450,000 CpG sites in the human
+                  genome.}},
+  journal =	 {Epigenetics},
+  year =	 {2011},
+  volume =	 {6},
+  number =	 {6},
+  pages =	 {692--702},
+  doi =		 {10.4161/epi.6.6.16196},
+  pmid =	 {21593595}
+}
+
+@article{Du:2010,
+  author =	 {Du, Pan and Zhang, Xiao and Huang, Chiang-Ching and Jafari, Nadereh and Kibbe,
+                  Warren A and Hou, Lifang and Lin, Simon M},
+  title =	 {{Comparison of Beta-value and M-value methods for quantifying methylation levels
+                  by microarray analysis}},
+  journal =	 {BMC Bioinformatics},
+  year =	 {2010},
+  volume =	 {11},
+  pages =	 {587},
+  doi =		 {10.1186/1471-2105-11-587},
+  pmid =	 {21118553}
+}
+
+@article{Bibikova:2011,
+  author =	 {Bibikova, Marina and Barnes, Bret and Tsan, Chan and Ho, Vincent and Klotzle,
+                  Brandy and Le, Jennie M and Delano, David and Zhang, Lu and Schroth, Gary P and
+                  Gunderson, Kevin L and Fan, Jian-Bing and Shen, Richard},
+  title =	 {{High density DNA methylation array with single CpG site resolution.}},
+  journal =	 {Genomics},
+  year =	 {2011},
+  volume =	 {98},
+  number =	 {4},
+  pages =	 {288--295},
+  doi =		 {10.1016/j.ygeno.2011.07.007},
+  pmid =	 {21839163}
+}
+
+@article{Dedeurwaerder:2011,
+  author =	 {Dedeurwaerder, Sarah and Defrance, Matthieu and Calonne, Emilie and Denis,
+                  H{\'e}l{\`e}ne and Sotiriou, Christos and Fuks, Fran{\c c}ois},
+  title =	 {{Evaluation of the Infinium Methylation 450K technology.}},
+  journal =	 {Epigenomics},
+  year =	 {2011},
+  volume =	 {3},
+  number =	 {6},
+  pages =	 {771--784},
+  doi =		 {10.2217/epi.11.105},
+  pmid =	 {22126295}
+}
+
+@article{Maksimovic:2012,
+  author =	 {Maksimovic, Jovana and Gordon, Lavinia and Oshlack, Alicia},
+  title =	 {{SWAN: Subset quantile Within-Array Normalization for Illumina Infinium
+                  HumanMethylation450 BeadChips.}},
+  journal =	 {Genome Biology},
+  year =	 {2012},
+  volume =	 {13},
+  number =	 {6},
+  pages =	 {R44},
+  doi =		 {10.1186/gb-2012-13-6-r44},
+  pmid =	 {22703947}
+}
+
+% Local Variables:
+% eval: (setq fill-column 100)
+% End:
